--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,13 @@
   "require-dev": {
     "phpunit/phpunit": "4.5.*"
   },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Merkeleon\\Form\\Providers\\FormServiceProvider"
+      ]
+    }
+  },
   "autoload": {
     "psr-4": {
       "Merkeleon\\Form\\": "src/"
