add timezone to date element

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     }
   },
   "autoload": {
+    "files": [
+      "src/Support/helpers.php"
+    ],
     "psr-4": {
       "Merkeleon\\Form\\": "src/"
     }
