--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "require": {
     "php": ">=5.3.0",
-    "laravel/framework": "5.*|6.*",
+    "laravel/framework": ">=5.0",
     "doctrine/dbal": "~2.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "7.*|8.*"
+    "phpunit/phpunit": ">=5"
   },
   "extra": {
     "laravel": {
